handleSubmit directly from index.js... ...since 'Client' lib not working for some reason

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <section>
-        <form onsubmit="Client.handleSubmit(event)">
+        <form>
           <input
             class="form-input"
             id="url-input"
