display errors on failed request or invalid url

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,7 +18,7 @@
             autocomplete="off"
             required
           />
-          <div class="error">Please enter a valid URL to an article</div>
+          <div class="error"></div>
 
           <button type="submit">Submit</button>
         </form>
